# home_work_12_3

./: README.md  log.txt  main.py  pyproject.toml
data/: operations.json  transactions.csv  transactions.json
decorators/: log.py
htmlcov/: index.html  status.json
src/: external_api.py  generators.py  log.txt  masks.py  new_mask.py  read_csv.py  read_xlsx.py  search_transactions.py  sort_date.py  utils.py
tests/: conftest.py  test_external_api.py  test_generators.py  test_log.py  test_masks.py  test_read_csv.py  test_read_xslx.py  test_search_transactions.py  test_utils.py  test_widget.py
