[project]
name = "h-12-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Rustam Gabdelislamov",email = "rustamgabdelislamov911@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.15.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"
pytest = "^8.3.5"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.git          # в корне проекта
  )/
)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'